force-app/main/default/objects/df_160_sumlegat__c/df_160_sumlegat__c.object-meta.xml
<CustomObject>
    <label>Sumlegat</label>
    <nameField>
        <label>Sumlegat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sumlegats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>