force-app/main/default/objects/df_160_sumlegat__c/fields/gruppret_sumlegat__c.field-meta.xml
<CustomField>
    <fullName>gruppret_sumlegat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gruppéret sumlegat</label>
    <type>Checkbox</type>
</CustomField>