force-app/main/default/objects/df_160_sumlegat__c/fields/modtager_sumlegat__c.field-meta.xml
<CustomField>
    <fullName>modtager_sumlegat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modtager af sumlegat</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>modtager_sumlegat</relationshipLabel>
    <relationshipName>modtager_sumlegat</relationshipName>
    <type>Lookup</type>
</CustomField>