force-app/main/default/objects/df_160_sumlegat__c/fields/sumlegat_belb__c.field-meta.xml
<CustomField>
    <fullName>sumlegat_belb__c</fullName>
    <label>Beløb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>