force-app/main/default/objects/df_160_sumlegat__c/fields/sumlegat_cprnummer__c.field-meta.xml
<CustomField>
    <fullName>sumlegat_cprnummer__c</fullName>
    <label>CPR-nummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>