force-app/main/default/objects/df_160_sumlegat__c/fields/sumlegat_efternavn__c.field-meta.xml
<CustomField>
    <fullName>sumlegat_efternavn__c</fullName>
    <label>Efternavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>