force-app/main/default/objects/df_160_sumlegat__c/fields/sumlegat_fordeling__c.field-meta.xml
<CustomField>
    <fullName>sumlegat_fordeling__c</fullName>
    <label>Hvornår skal sumlegatet fordeles 0ec27</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>sumlegat_fordeling_frst</fullName>
                <label>Efter førstafdøde</label>
            </value>
            <value>
                <fullName>sumlegat_fordeling_lngst</fullName>
                <label>Efter længstlevende</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>