force-app/main/default/objects/df_160_sumlegat__c/fields/sumlegat_fornavn__c.field-meta.xml
<CustomField>
    <fullName>sumlegat_fornavn__c</fullName>
    <label>Fornavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>