force-app/main/default/objects/df_160_sumlegat__c/fields/sumlegat_personligt__c.field-meta.xml
<CustomField>
    <fullName>sumlegat_personligt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personligt sumlegat</label>
    <type>Checkbox</type>
</CustomField>