force-app/main/default/objects/df_160_sumlegat__c/fields/vlg_gruppe_sumlegat__c.field-meta.xml
<CustomField>
    <fullName>vlg_gruppe_sumlegat__c</fullName>
    <label>Vælg gruppe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>vlg_gruppe_sum_brn</fullName>
                <label>Børn</label>
            </value>
            <value>
                <fullName>vlg_gruppe_sum_brnebrn</fullName>
                <label>Børnebørn</label>
            </value>
            <value>
                <fullName>vlg_gruppe_sum_nev_niece</fullName>
                <label>Nevøer/Niecer</label>
            </value>
            <value>
                <fullName>vlg_gruppe_sum_sskende</fullName>
                <label>Søskende</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>